test/integration/good/propto-good.stan
model {
  target += normal_propto_lpdf(1 | 0, 1);
}