test/integration/bad/missing_dist_suffix/lpmf_lpdf_replacement1.stan
data { 
}
model {  
    // known family, known suffix, not implemented  
    target += binomial_lpdf(1|0,1);
}
